git-svn-id: svn://localhost/Media%20Server@276 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/templates/live/index.html
+++ b/templates/live/index.html
@@ -55,6 +55,7 @@ $this->assign('newlineregexp', '/([^ ]{25})/i');
 
 {php}
 theme('header');
+//{include file=$templates.TEMPLATE_HEADER}
 {/php}
 		<div class="contentSpacing">
 {assign var=dirlen value=$dir|strlen}
