git-svn-id: svn://localhost/Media%20Server@283 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/templates/live/live.css
+++ b/templates/live/live.css
@@ -79,7 +79,7 @@ body {
 }
 
 .menu .itemSelect {
-	background:#F7FBFF url(images/browse_select_bg.png) repeat-x scroll center bottom;
+	background:#F7FBFF url(?plugin=template&template=live&tfile=images/browse_select_bg.png) repeat-x scroll center bottom;
 	border:1px solid #D8F0FA;
 }
 
@@ -120,7 +120,7 @@ body {
 	font-weight:normal;
 	line-height:normal;
 	width:100%;
-	background:url(images/headerBG_24_~HeaderGradientImageType~.png) repeat scroll center top;
+	background:url(?plugin=template&template=live&tfile=images/headerBG_24_~HeaderGradientImageType~.png) repeat scroll center top;
 	height:39px;
 	text-align:left;
 }
@@ -231,7 +231,7 @@ body {
 	font-weight:normal;
 	line-height:normal;
 	width:auto;
-	background:#307C0B url(images/headerBG_24_~HeaderGradientImageType~.png) repeat scroll center center;
+	background:#307C0B url(?plugin=template&template=live&tfile=images/headerBG_24_~HeaderGradientImageType~.png) repeat scroll center center;
 	border:medium none;
 	color:#FFFFFF;
 	margin:0;
@@ -282,7 +282,7 @@ body {
 }
 
 .sideColumn.right {
-	background-image:url(images/shadow.png);
+	background-image:url(?plugin=template&template=live&tfile=images/shadow.png);
 	background-position:0 0;
 	background-repeat:no-repeat;
 }
@@ -341,7 +341,7 @@ body {
 }
 
 .pageHighlight, .pageHighlightW {
-	background:#F7FBFF url(images/browse_select_bg.png) repeat-x scroll center bottom;
+	background:#F7FBFF url(?plugin=template&template=live&tfile=images/browse_select_bg.png) repeat-x scroll center bottom;
 	border:1px solid #D8F0FA;
 	height:1.5em;
 	left:0;
@@ -359,7 +359,7 @@ body {
 }
 
 .pageLink {
-	background:transparent url(images/transparent.gif) repeat scroll 0 0;
+	background:transparent url(?plugin=template&template=live&tfile=images/transparent.gif) repeat scroll 0 0;
 	color:#0066A7;
 	font-weight:inherit;
 	height:100%;
@@ -394,7 +394,7 @@ body {
 
 .notselected {
 	visibility:hidden;
-	background:#F7FBFF url(images/browse_select_bg.png) repeat-x scroll center bottom;
+	background:#F7FBFF url(?plugin=template&template=live&tfile=images/browse_select_bg.png) repeat-x scroll center bottom;
 	border:1px solid #D8F0FA;
 	height:9.5em;
 	left:0;
@@ -405,7 +405,7 @@ body {
 
 .selected {
 	visibility:visible;
-	background:#F7FBFF url(images/browse_select_bg.png) repeat-x scroll center bottom;
+	background:#F7FBFF url(?plugin=template&template=live&tfile=images/browse_select_bg.png) repeat-x scroll center bottom;
 	border:1px solid #D8F0FA;
 	height:9.5em;
 	left:0;
@@ -437,7 +437,7 @@ body {
 }
 
 .itemLink {
-	background:transparent url(images/transparent.gif) repeat scroll 0 0;
+	background:transparent url(?plugin=template&template=live&tfile=images/transparent.gif) repeat scroll 0 0;
 	height:100%;
 	left:0;
 	position:absolute;
@@ -464,7 +464,7 @@ body {
 #infoBar {
 	border-top:1px solid #E0E0E0;
 	height:64px;
-	background:transparent url(images/middle_fade.png) repeat scroll 0 0;
+	background:transparent url(?plugin=template&template=live&tfile=images/middle_fade.png) repeat scroll 0 0;
 	color:#FFF;
 	width:100%;
 	line-height:normal;
@@ -572,4 +572,17 @@ body {
 
 #footerCtr ul li.last {
 	border-right-style:none;
+}
+
+.hover {
+	display:block;
+	border:1px solid #D8F0FA;
+	margin:5px 0px 5px 0px;
+	background: url(?plugin=template&template=live&tfile=images/browse_select_bg.png) repeat-x scroll center bottom #F7FBFF;
+}
+
+.nothover {
+	display:block;
+	border:1px solid #FFF;
+	margin:5px 0px 5px 0px;
 }
