git-svn-id: svn://localhost/Media%20Server@288 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/templates/live/live.css
+++ b/templates/live/live.css
@@ -649,7 +649,7 @@ table.install td {
 	background:url(?plugin=template&template=live&tfile=images/headerBG_24_~HeaderGradientImageType~.png) repeat scroll center top;
 	height:39px;
 	text-align:left;
-	position:absolute;
+	position:fixed;
 	bottom:0px;
 	left:0px;
 	background-color:#06A;
