git-svn-id: svn://localhost/Media%20Server@295 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/templates/extjs/filetree/filetree.html
+++ b/templates/extjs/filetree/filetree.html
@@ -85,7 +85,7 @@ License details: http://www.gnu.org/licenses/lgpl.html
 		Info: <a href="http://extjs.com/forum/showthread.php?p=147056" target="_blank">I want Saki's FileTree backend</a>
 	</p>
 	<p>
-		<b><a href="http://extjs.eu" target="_blank">Other Extensions and Plugins</a></b>
+		<b><a href="http://extjs.eu" target="_blank">Other Extensions and plugins</a></b>
 	</p>
 
 	<!-- digg -->
