--- a/templates/live/live.css
+++ b/templates/live/live.css
@@ -79,7 +79,7 @@ body {
 }
 
 .menu .itemSelect {
-	background:#F7FBFF url(?plugin=template&template=live&tfile=images/browse_select_bg.png) repeat-x scroll center bottom;
+	background:#F7FBFF url(?module=template&template=live&tfile=images/browse_select_bg.png) repeat-x scroll center bottom;
 	border:1px solid #D8F0FA;
 }
 
@@ -95,9 +95,6 @@ body {
 
 #bodydiv {
 	padding:0 400px 0 400px
-}
-* {
-	line-height:130%;
 }
 #sizer {
 	width:100%
@@ -120,7 +117,7 @@ body {
 	font-weight:normal;
 	line-height:normal;
 	width:100%;
-	background:url(?plugin=template&template=live&tfile=images/headerBG_24_~HeaderGradientImageType~.png) repeat scroll center top;
+	background:url(?module=template&template=live&tfile=images/headerBG_24_~HeaderGradientImageType~.png) repeat scroll center top;
 	height:39px;
 	text-align:left;
 }
@@ -231,7 +228,7 @@ body {
 	font-weight:normal;
 	line-height:normal;
 	width:auto;
-	background:#307C0B url(?plugin=template&template=live&tfile=images/headerBG_24_~HeaderGradientImageType~.png) repeat scroll center center;
+	background:#307C0B url(?module=template&template=live&tfile=images/headerBG_24_~HeaderGradientImageType~.png) repeat scroll center center;
 	border:medium none;
 	color:#FFFFFF;
 	margin:0;
@@ -282,7 +279,7 @@ body {
 }
 
 .sideColumn.right {
-	background-image:url(?plugin=template&template=live&tfile=images/shadow.png);
+	background-image:url(?module=template&template=live&tfile=images/shadow.png);
 	background-position:0 0;
 	background-repeat:no-repeat;
 }
@@ -341,7 +338,7 @@ body {
 }
 
 .pageHighlight, .pageHighlightW {
-	background:#F7FBFF url(?plugin=template&template=live&tfile=images/browse_select_bg.png) repeat-x scroll center bottom;
+	background:#F7FBFF url(?module=template&template=live&tfile=images/browse_select_bg.png) repeat-x scroll center bottom;
 	border:1px solid #D8F0FA;
 	height:1.5em;
 	left:0;
@@ -359,7 +356,7 @@ body {
 }
 
 .pageLink {
-	background:transparent url(?plugin=template&template=live&tfile=images/transparent.gif) repeat scroll 0 0;
+	background:transparent url(?module=template&template=live&tfile=images/transparent.gif) repeat scroll 0 0;
 	color:#0066A7;
 	font-weight:inherit;
 	height:100%;
@@ -394,7 +391,7 @@ body {
 
 .notselected {
 	visibility:hidden;
-	background:#F7FBFF url(?plugin=template&template=live&tfile=images/browse_select_bg.png) repeat-x scroll center bottom;
+	background:#F7FBFF url(?module=template&template=live&tfile=images/browse_select_bg.png) repeat-x scroll center bottom;
 	border:1px solid #D8F0FA;
 	height:9.5em;
 	left:0;
@@ -405,7 +402,7 @@ body {
 
 .selected {
 	visibility:visible;
-	background:#F7FBFF url(?plugin=template&template=live&tfile=images/browse_select_bg.png) repeat-x scroll center bottom;
+	background:#F7FBFF url(?module=template&template=live&tfile=images/browse_select_bg.png) repeat-x scroll center bottom;
 	border:1px solid #D8F0FA;
 	height:9.5em;
 	left:0;
@@ -437,7 +434,7 @@ body {
 }
 
 .itemLink {
-	background:transparent url(?plugin=template&template=live&tfile=images/transparent.gif) repeat scroll 0 0;
+	background:transparent url(?module=template&template=live&tfile=images/transparent.gif) repeat scroll 0 0;
 	height:100%;
 	left:0;
 	position:absolute;
@@ -464,7 +461,7 @@ body {
 #infoBar {
 	border-top:1px solid #E0E0E0;
 	height:64px;
-	background:transparent url(?plugin=template&template=live&tfile=images/middle_fade.png) repeat scroll 0 0;
+	background:transparent url(?module=template&template=live&tfile=images/middle_fade.png) repeat scroll 0 0;
 	color:#FFF;
 	width:100%;
 	line-height:normal;
@@ -578,14 +575,14 @@ body {
 	display:block;
 	border:1px solid #D8F0FA;
 	margin:5px 0px 5px 0px;
-	background: url(?plugin=template&template=live&tfile=images/browse_select_bg.png) repeat-x scroll center bottom #F7FBFF;
+	background: url(?module=template&template=live&tfile=images/browse_select_bg.png) repeat-x scroll center bottom #F7FBFF;
 }
 
 .hover.red {
 	display:block;
 	border:1px solid #FAF0D8;
 	margin:5px 0px 5px 0px;
-	background: url(?plugin=template&template=live&tfile=images/browse_select_bg_red.png) repeat-x scroll center bottom #F7FBFF;
+	background: url(?module=template&template=live&tfile=images/browse_select_bg_red.png) repeat-x scroll center bottom #F7FBFF;
 }
 
 .nothover {
@@ -602,7 +599,7 @@ body {
 	float:right;
 	height:48px;
 	width:48px;
-	background-image:url(?plugin=template&template=live&tfile=images/button_cancel.png);
+	background-image:url(?module=template&template=live&tfile=images/button_cancel.png);
 }
 
 td.title {
@@ -646,7 +643,7 @@ table.install td {
 	font-variant:normal;
 	font-weight:normal;
 	line-height:normal;
-	background:url(?plugin=template&template=live&tfile=images/headerBG_24_~HeaderGradientImageType~.png) repeat scroll center top;
+	background:url(?module=template&template=live&tfile=images/headerBG_24_~HeaderGradientImageType~.png) repeat scroll center top;
 	height:39px;
 	text-align:left;
 	position:fixed;
