--- a/templates/live/live.css
+++ b/templates/live/live.css
@@ -23,6 +23,11 @@ body {
 	background-color:#FF6;
 }
 
+.debug.hide .msg, .debug.hide div, .debug.hide br {
+	display:none;
+	visibility:hidden;
+}
+
 #selector {
 	-moz-opacity:.25;
 	opacity: .25;
@@ -376,64 +381,59 @@ body {
 	width:850px;
 }
 
-.file {
+.filesmall {
 	border:1px solid #FEFEFE;
-	float:left;
-	height:9.5em;
+	height:1.5em;
 	margin:0.2em 1px;
 	position:relative;
-	width:7em;
+	width:9em;
 }
 
-.select .selected, .select .notselected {
-	visibility: visible;
-}
-
-.notselected {
+.filesmall .notselected {
 	visibility:hidden;
 	background:#F7FBFF url(?module=template&template=live&tfile=images/browse_select_bg.png) repeat-x scroll center bottom;
 	border:1px solid #D8F0FA;
-	height:9.5em;
+	height:1.5em;
 	left:0;
 	position:absolute;
 	top:0;
-	width:7em;
+	width:9em;
 }
 
-.selected {
+.filesmall .selected {
 	visibility:visible;
 	background:#F7FBFF url(?module=template&template=live&tfile=images/browse_select_bg.png) repeat-x scroll center bottom;
 	border:1px solid #D8F0FA;
-	height:9.5em;
+	height:1.5em;
 	left:0;
 	position:absolute;
 	top:0;
-	width:7em;
+	width:9em;
 }
 
-.itemTable {
+.filesmall .itemTable {
 	left:0;
 	position:absolute;
 	top:0;
 }
 
-.itemTable tr {
-	height:5.5em;
+.filesmall .itemTable tr {
+	height:1.5em;
 }
 
-.itemTable td {
-	width:7em;
-	text-align:center;
+.filesmall .itemTable td {
+	width:9em;
+	text-align:left;
 }
 
-.itemTable div {
-	text-align:center;
-	margin-left:1.2em;
-	height:48px;
-	width:48px;
+.filesmall .itemTable div {
+	text-align:left;
+	margin-left:0.2em;
+	height:16px;
+	width:16px;
 }
 
-.itemLink {
+.filesmall .itemLink {
 	background:transparent url(?module=template&template=live&tfile=images/transparent.gif) repeat scroll 0 0;
 	height:100%;
 	left:0;
@@ -446,7 +446,91 @@ body {
 	text-decoration:none;
 }
 
-.itemLink span {
+.filesmall .itemLink span {
+	bottom:0;
+	cursor:pointer;
+	display:block;
+	height:1.5em;
+	left:1.8em;
+	top:0.3em;
+	overflow:hidden;
+	position:absolute;
+	text-align:left;
+	width:8em;
+	white-space:nowrap;
+}
+
+.select .selected, .select .notselected {
+	visibility: visible;
+}
+
+.file {
+	border:1px solid #FEFEFE;
+	float:left;
+	height:9.5em;
+	margin:0.2em 1px;
+	position:relative;
+	width:7em;
+}
+
+.file .notselected {
+	visibility:hidden;
+	background:#F7FBFF url(?module=template&template=live&tfile=images/browse_select_bg.png) repeat-x scroll center bottom;
+	border:1px solid #D8F0FA;
+	height:9.5em;
+	left:0;
+	position:absolute;
+	top:0;
+	width:7em;
+}
+
+.file .selected {
+	visibility:visible;
+	background:#F7FBFF url(?module=template&template=live&tfile=images/browse_select_bg.png) repeat-x scroll center bottom;
+	border:1px solid #D8F0FA;
+	height:9.5em;
+	left:0;
+	position:absolute;
+	top:0;
+	width:7em;
+}
+
+.file .itemTable {
+	left:0;
+	position:absolute;
+	top:0;
+}
+
+.file .itemTable tr {
+	height:5.5em;
+}
+
+.file .itemTable td {
+	width:7em;
+	text-align:center;
+}
+
+.file .itemTable div {
+	text-align:center;
+	margin-left:1.2em;
+	height:48px;
+	width:48px;
+}
+
+.file .itemLink {
+	background:transparent url(?module=template&template=live&tfile=images/transparent.gif) repeat scroll 0 0;
+	height:100%;
+	left:0;
+	position:absolute;
+	top:0;
+	width:100%;
+	z-index:100;
+	color:#0066A7;
+	font-weight:inherit;
+	text-decoration:none;
+}
+
+.file .itemLink span {
 	bottom:0;
 	cursor:pointer;
 	display:block;
