git-svn-id: svn://localhost/Media%20Server@303 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/templates/live/live.css
+++ b/templates/live/live.css
@@ -28,6 +28,11 @@ body {
 	visibility:hidden;
 }
 
+.error.hide b, .error.hide br {
+	display:none;
+	visibility:hidden;
+}
+
 #selector {
 	-moz-opacity:.25;
 	opacity: .25;
