git-svn-id: svn://localhost/Media%20Server@307 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/templates/live/live.css
+++ b/templates/live/live.css
@@ -23,9 +23,14 @@ body {
 	background-color:#FF6;
 }
 
-.debug.hide .msg, .debug.hide div, .debug.hide br {
+.debug.hide * {
 	display:none;
 	visibility:hidden;
+}
+
+.debug.hide #hide_link {
+	display:block;
+	visibility:visible;
 }
 
 .error.hide b, .error.hide br {
