git-svn-id: svn://localhost/Media%20Server@325 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/templates/live/live.css
+++ b/templates/live/live.css
@@ -645,7 +645,7 @@ body {
 	list-style-type:none;
 	margin:0;
 	padding:0;
-	white-space:nowrap;
+	display:inline;
 }
 
 #footerCtr ul li {
@@ -653,8 +653,8 @@ body {
 	border-right-width:1px;
 	float:left;
 	padding:0 8px;
-	white-space:nowrap;
 	margin:0 0 3px;
+	display:inline;
 }
 
 #footerCtr ul li a {
