git-svn-id: svn://localhost/Media%20Server@332 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/templates/live/live.css
+++ b/templates/live/live.css
@@ -809,3 +809,16 @@ input.stndsize {
 	float:right;
 	margin-bottom:-40px;
 }
+
+#user_errors {
+	border:2px solid #C00;
+	background-color:#F99;
+}
+#note_errors {
+	border:2px solid #09F;
+	background-color:#CEF;
+}
+#warn_errors {
+	border:2px solid #CC0;
+	background-color:#FF9;
+}
